--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
-{
+{  
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "version": "independent",
+  "conventionalCommits": true,
   "packages": [
     "."
-  ],
-  "version": "0.1.0"
+  ]
 }
