--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "hellcat29A",
   "license": "ISC",
   "description": "This is A Shared Header For Diva Software ",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
@@ -38,9 +38,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "lerna": "^8.1.6"
-
+    "lerna": "^8.1.6",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   },
   "peerDependencies": {
     "react": "^18.3.1",
