--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,5 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "version": "independent",
-  "conventionalCommits": true,
-  "packages": [
-    ".*"
-  ]
+  "conventionalCommits": true
 }
