--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,8 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "version": "independent",
-  "conventionalCommits": true
+  "conventionalCommits": true,
+  "packages": [
+    "*"
+  ]
 }
